--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 * {  /* the * means select everything on the page */
   text-align: center;
   margin: auto;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 body {
   background-image: url("https://static.vecteezy.com/system/resources/previews/000/153/567/large_2x/cavern-background-blue-free-vector.jpg");
-  position: ;
   z-index: -123;
 }
 
@@ -21,20 +21,14 @@ body {
 
 .jumbotron {
   color: black;
-  font-family: 'Titillium Web', sans-serif;
   padding: 10px;
   border: black 2px solid;
   margin: auto;
+  font-size: 50px;
 }
 
 .row {
   float: left;
-}
-
-nav {
-  font-family: 'Slabo 27px', serif;
-  padding: 10px;
-  border: 2px black solid;
 }
 
 .bkgrnd {
@@ -43,6 +37,7 @@ nav {
 
 .instructions {
   width: 50%;
+  border: 2px, solid, white;
 }
 
 .container {
